build:  Maven now abcl to build and test ABCL
No longer needing to support openjdk6 enables us to use the Maven
Ant run plugin to delegate common Maven lifecycle points to the
canonical build instructions.

The following Maven invocation now work:

   mvn compile
   mvn install
   mvn test

Tests via ANSI-TEST and CL-BENCH still need to be cloned locally
manually in order for the full testing suite to pass.

Maven will install Ant "on its own" if it isn't already present.