@@ -1111,17 +1111,6 @@ ${basedir}/../cl-bench
       <java fork="true" dir="${basedir}"
             classpathref="abcl.classpath.dist"
             classname="org.armedbear.lisp.Main">
-        <!-- Run in 64bit mode-->
-        <jvmarg value="-d64"/> 
-
-        <!-- Enable JVM assertions -->
-        <jvmarg value="-ea"/>  
-        
-        <!-- (Possibly) unload classes when reference count reaches zero -->
-        <jvmarg value="-XX:+CMSClassUnloadingEnabled"/> 
-
-        <!-- Increase the size of the space used to store JVM class metadata. -->
-        <jvmarg value="-XX:MaxPermSize=768m"/> 
 
         <arg value="--noinit"/> 
         <arg value="--eval"/><arg value="(require (quote asdf))"/>
@@ -1159,6 +1148,8 @@ ${basedir}/../cl-bench
             classname="org.armedbear.lisp.Main">
         <arg value="--noinit"/> 
         <arg value="--eval"/><arg value="(require (quote asdf))"/>
+        <arg value="--eval"/><arg value="(require (quote abcl-contrib))"/>
+        <arg value="--eval"/><arg value="(asdf:make :quicklisp-abcl)"/>
         <arg value="--eval"/>
           <arg value="(asdf:initialize-source-registry `(:source-registry (:directory ,*default-pathname-defaults*) :inherit-configuration))"/>
         <arg value="--eval"/><arg value="(asdf:test-system :abcl/test/cl-bench)"/>
